Replaced genre icons with solid ones. Fixed type align for year

--- a/movie-suggestions/www/css/style.css
+++ b/movie-suggestions/www/css/style.css
@@ -1,2 +1,5 @@
 /* Empty. Add your own CSS if you like */
-/* Suggestions Page */
+/* tab-suggest */
+.type-align {
+	text-align: right;
+}
